[package]
name = "eth_etf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.34"
reqwest = { version = "0.11", features = ["json"] }